[package]
authors = ["stuart_zhang <stuartpage@qq.com>"]
categories = ["asynchronous"]
description = "模仿 jQuery.Deferred()，允许从 Future 实现类实例的外部对正在 pending 的 Future 对象进行 resolve 或 reject 处理。"
edition = "2021"
keywords = ["async", "future", "defer"]
license = "MIT"
name = "deferred-future"
repository = "https://github.com/stuartZhang/deferred-future"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nodejs = []
local = []
thread = []
default = ["local", "thread"]

[dependencies]
futures = "0.3.28"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
futures = "0.3.28"
wasm-bindgen-test = "0.3.37"
wasm-gloo-dom-events = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
futures = {version = "0.3.28", features = [
    "executor",
    "thread-pool"
]}
futures-time = "3.0.0"

[patch.crates-io]
# wasm-gloo-dom-events = { path = "C:\\Users\\stuar\\github_projects\\dom_events" }